<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.aschen.smartserveur.activity.MainActivity">

    <Button
        android:text="@string/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GetCategories"/>

    <Button
        android:text="@string/button_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ShowCategories"/>

    <Button
        android:text="@string/button_create_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CreateSession"/>

    <TextView
        android:id="@+id/category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/category_image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/category_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
